<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:clickable="false"
    tools:context=".Activity.TimerCreateActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:label="@string/app_name"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorText" >

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Training"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />


            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorBack"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorBack"
                android:textCursorDrawable="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/textViewPrep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Prepair"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ready" />

                <Button
                    android:id="@+id/btnPrepPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/Add_new"
                    />

                <EditText
                    android:id="@+id/inputPrep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnPrepMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Minus"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Training"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#fa2255"
                    android:src="@drawable/training" />
                <Button
                    android:id="@+id/btnWorkPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Add_new"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/inputWork"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#DC0E54" />

                <Button
                    android:id="@+id/btnWorkMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Minus"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Calm"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/relax" />
                <Button
                    android:id="@+id/btnRestPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Add_new"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/inputRest"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/btnRestMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Minus"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <TextView
                android:id="@+id/textCycleRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Cycle"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/time" />
                <Button
                    android:id="@+id/btnCyclePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Add_new"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/inputCycle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnCycleMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Minus"
                    android:background="@color/colorAccent"
                    style="@style/KeyboardButton"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


            <TextView
                android:id="@+id/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Цвет"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorBack" />


            <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                android:id="@+id/color_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hslColoringMode="pure"
                app:hslMode="hue"
                />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:textAlignment="center">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/Return"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>